--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "axios": "^1.5.1",
     "bootstrap": "^5.3.0",
     "chart.js": "^4.4.1",
+    "csv-writer": "^1.6.0",
     "date-fns": "^2.30.0",
     "dayjs": "^1.11.9",
     "exceljs": "^4.4.0",
